<resources>
    <string name="app_name">班圈</string>
    <string name="used">体验班圈</string>

    <!--主界面底部TAB-->
    <string name="message">消息</string>
    <string name="notification">班级成员</string>
    <string name="manage">管理</string>

    <!--主界面菜单选项-->
    <string name="create_class">建立班级</string>
    <string name="join_class">加入班级</string>
    <string name="scan_code">扫一扫</string>

    <!--主界面侧滑菜单-->
    <string name="my_class">我的班级</string>
    <string name="evaluate">推优评优</string>
    <string name="activity_vote">活动投票</string>
    <string name="post_data">上传资料</string>
    <string name="personal_info">个人信息</string>
    <string name="unsign">退出登录</string>

    <!--登录界面-->
    <string name="register_name">请输入账号</string>
    <string name="register_pass">请输入密码</string>
    <string name="register_phone">请输入手机号</string>
    <string name="register_code">请输入验证码</string>
    <string name="register_getcode">获取验证码</string>
    <string name="register_sign">注  册</string>

    <string name="location_recv">[%1$s location]</string>
    <string name="location_message">The location information</string>
    <string name="recording_video">Record video</string>
    <string name="location_prefix">[my location]</string>
    <string name="voice">Voice</string>
    <string name="picture">[Picture]</string>
    <string name="video">[Video]</string>
    <string name="file">[file]</string>
    <string name="dynamic_expression">[Dynamic expression]</string>
    <string name="voice_prefix">[Voice]</string>
    <string name="voice_call">[Voice call]</string>
    <string name="video_call">[Video call]</string>
    <string name="all_members">All members</string>
</resources>
