<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gray"
    tools:context="wjx.classmanager.activity.RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/register_linear"
        android:layout_marginBottom="8dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/icon_image"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_centerInParent="true"
            android:src="@drawable/title_bar_icon"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/register_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:background="#fff"
            android:id="@+id/register_input_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="5dp"
            android:textColorHint="@color/colorPrimary"
            app:counterEnabled="true"
            app:counterMaxLength="11"
            app:counterOverflowTextAppearance="@color/colorPrimary"
            app:hintTextAppearance="@color/colorPrimary">

            <EditText
                android:layout_gravity="center"
                android:id="@+id/register_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/register_name"
                android:inputType="text"
                android:maxLines="1"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:background="#fff"
            android:id="@+id/register_input_pass"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="5dp"
            android:textColorHint="@color/colorPrimary"
            app:counterEnabled="true"
            app:counterMaxLength="16"
            app:counterOverflowTextAppearance="@color/colorPrimary"
            app:hintTextAppearance="@color/colorPrimary"
            app:passwordToggleEnabled="true">

            <EditText
                android:layout_gravity="center"
                android:id="@+id/register_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/register_pass"
                android:inputType="textPassword"
                android:maxLines="1"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:background="#fff"
            android:id="@+id/register_input_phone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="5dp"
            android:textColorHint="@color/colorPrimary"
            app:counterEnabled="true"
            app:counterMaxLength="11"
            app:hintTextAppearance="@color/colorPrimary"
            app:counterOverflowTextAppearance="@color/colorPrimary">

            <EditText
                android:layout_gravity="center"
                android:id="@+id/register_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/register_phone"
                android:inputType="number"
                android:maxLines="1"/>

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:background="#fff"
                android:id="@+id/register_input_code"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:textColorHint="@color/colorPrimary"
                app:counterEnabled="true"
                app:counterMaxLength="6"
                app:counterOverflowTextAppearance="@color/colorPrimary"
                app:hintTextAppearance="@color/colorPrimary">

                <EditText
                    android:layout_gravity="center"
                    android:id="@+id/register_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/register_code"
                    android:inputType="number"
                    android:maxLines="1"/>
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/register_getcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_orange_dark"
                android:text="@string/register_getcode"
                android:textColor="@android:color/white"
                android:textSize="16sp"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/register_sign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_linear"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/colorPrimary"
        android:text="@string/register_sign"
        android:textColor="@android:color/white"
        android:textSize="20sp"/>

</RelativeLayout>
