<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="wjx.classmanager.ui.activity.MainActivity">

    <wjx.classmanager.widget.SlideMenu
        android:id="@+id/slide_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:rightPadding="100dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <include layout="@layout/left_menu"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/white"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:background="@color/colorPrimary"/>

                <wjx.classmanager.widget.TitleBar
                    android:id="@+id/title_bar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <FrameLayout
                    android:id="@+id/frame_notify"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>

                <FrameLayout
                    android:id="@+id/frame_message"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>

                <FrameLayout
                    android:id="@+id/frame_manage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>

                <RadioGroup
                    android:id="@+id/radio_group"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:background="@color/bg_gray"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radio_msg"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:button="@null"
                        android:checked="true"
                        android:drawableTop="@drawable/main_msg_selector"
                        android:gravity="center"
                        android:text="@string/message"
                        android:textColor="@color/main_msg_color"
                        android:textSize="20sp"/>

                    <RadioButton
                        android:id="@+id/radio_notify"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:button="@null"
                        android:drawableTop="@drawable/main_member_selector"
                        android:gravity="center"
                        android:text="@string/notification"
                        android:textColor="@color/main_member_color"
                        android:textSize="20sp"/>

                    <RadioButton
                        android:id="@+id/radio_manage"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:button="@null"
                        android:drawableTop="@drawable/main_manage_selector"
                        android:gravity="center"
                        android:text="@string/manage"
                        android:textColor="@color/main_manage_color"
                        android:textSize="20sp"/>
                </RadioGroup>

            </LinearLayout>
        </LinearLayout>
    </wjx.classmanager.widget.SlideMenu>

</RelativeLayout>

